# shopify-migrator

./: .env.example  .gitignore  CLAUDE.md  Complete Store Build Guide  HANDOVER_THEME_SESSION.md  MIGRATION_GUIDE.md  README.md  Tara_Saudi_translations_Mar-10-2026.csv  Tara_Saudi_translations_Mar-11-2026_validated_translated_validated_translated.csv  Tara_Saudi_translations_Mar-16-2026.csv  Tara_Saudi_translations_Mar-16-2026_purged.csv  analyze_theme_keys.py  audit_and_fix_all.py  audit_bundles.py  audit_site.py  audit_site_ar.py  audit_store.py  audit_store.py.txt  audit_theme_keys.py  audit_translations.py  build_site.py  clean_translation_csv.py  compare_data.py  compare_stores.py  compare_stores_offline.py  crawl_and_translate.py  create_bundles.py  enable_ingredient_pages.py  export_quiz_catalog.py  export_source.py  export_spain.py  export_translations.py  fix_images.py  fix_ingredient_links_and_products.py  fix_metafields.py  fix_metaobject_files.py  fix_prices.py  fix_redirects.py  fix_remaining_ar.py  fix_status.py  (+51 more)
Arabic/: .tara_ar_progress.json  Tara_Saudi_translations_Mar-10-2026.csv  Tara_Saudi_translations_Mar-10-2026_todo.json  Tara_Saudi_translations_Mar-11-2026_validated.csv  Tara_Saudi_translations_Mar-11-2026_validated_mismatches.json  Tara_Saudi_translations_Mar-11-2026_validated_translated.csv  Tara_Saudi_translations_Mar-13-2026.csv  Tara_Saudi_translations_Mar-13-2026_validated.csv  Tara_Saudi_translations_Mar-13-2026_validated_mismatches.json  Tara_Saudi_translations_Mar-13-2026_validated_validated.csv  fixes_final.csv  tara_api_usage.md  (+4 more)
(+150 files in other folders)
